fix contrast issue

--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ h2 {
 }
 
 .contact button {
-  background-color: #6070ff;
+  background-color: #396df2;
   padding: 10px 20px;
   border: 1px solid #396df2;
   color: #fff;
